--- a/src/components/quiz/QuizProductCards/QuizProductCards.module.scss
+++ b/src/components/quiz/QuizProductCards/QuizProductCards.module.scss
@@ -13,6 +13,8 @@
 
 .cardSlot {
   min-width: 0;
+  width: 100%;
+  overflow: hidden;
 }
 
 .loader {
